--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,20 @@ android {
 }
 
 dependencies {
+    def ver_com_google = "1.1.0-alpha01"
+    def ver_appcompat = "1.0.2"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Language
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Core Android
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
+    implementation "androidx.appcompat:appcompat:$ver_appcompat"
+    implementation "com.google.android.material:material:$ver_com_google"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
     //Test Dependencies
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation "androidx.test:runner:1.1.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0"
 }
