--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation "com.google.android.material:material:$ver_com_google"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     //Test Dependencies
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.test:runner:1.1.0"
